@@ -1,5 +1,6 @@
 class UsersController < ApplicationController
   before_filter :authenticate, :except => :index
+  before_filter :get_filtered_tweets, :only => :index
 
   def index
     @users = User.paginate :per_page => G140[:users_per_page], :page => params[:page], :conditions => "status = 1", :order => 'id DESC'
