@@ -102,3 +102,44 @@
 #draggable span, #droppable span
   padding: 2px
   cursor: move
+
+.users_list
+  background: #E1F3FD
+  margin: 10px
+  padding: 2px
+  +border-radius(12px)
+
+  h2
+    background: #0094DA
+    color: #fff
+    font-size: 1.4em
+    margin: 5px
+    text-align: center
+    +border-radius(12px)
+
+  .users
+    background: #fff
+    margin: 10px 5px 5px 5px
+    padding: 5px
+    +border-radius(12px)
+
+    .tweet
+      padding: 10px 5px
+      border-bottom: 1px dashed #999
+      min-height: 45px
+
+      .body
+        color: #666
+        font-size: 0.9em
+        padding-left: 55px
+
+        .when
+          font-weight: bold
+
+      img
+        float: left
+        width: 48px
+        height: 48px
+
+.pagination
+  text-align: center
