@@ -1,11 +1,21 @@
-%h1
-  = t('user.title')
+- content_for(:sidebar) do
+  #hashtag_filter
+    %h2 #Fail
+    = render :partial => 'welcome/tweets', :object => @filtered_tweets
 
-- for user in @users
-  %p
-    = link_to user.screen_name, twitter_path(user.screen_name), :target => "_blank"
-    (
-    = t('global.time_ago', :time => time_ago_in_words(user.created_at))
-    )
-  %p
-    = will_paginate @users
+.users_list
+  %h2
+    = t('user.title')
+
+  .users
+    - @users.each do |user|
+      .tweet
+        = link_to image_tag(user.photo), twitter_path(user.screen_name), :target => "_blank"
+        .body
+          = link_to h(user.screen_name), twitter_path(user.screen_name), :target => "_blank"
+          = "(#{user.name})"
+          %span.when= t('user.created_at', :time => time_ago_in_words(user.created_at))
+          %br= user.location unless user.location.blank?
+          %br= link_to user.url, user.url, :target => "_blank" unless user.url.blank?
+    %p
+      = will_paginate @users
