@@ -6,6 +6,7 @@ Version 0.3
 
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Removed show user page and changed all show user links to point to user's twitter profile
+  * Implemented design for users page, added additional user info (name, url, location)
 
 07.02.2010
 ==========
